--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Exports a simple website using a bunch of conventions and a Figma document as the structure",
   "scripts": {
-    "parseFigma": "node tasks/parse-figma.js",
+    "parseFigma": "node parse-figma.js",
     "build": "npm install && npm run parseFigma"
   },
   "repository": {
