--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 figmaconfig:
   token: xxxx-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
   scale: 2
+  format: png
   documents:
     - aPDeXozOjVEEBVnRGP3gsm5B
 
