--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,7 @@ figmaconfig:
 
 title: Figma Designdoc
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Check this awesome design documentation.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
