adding the home flag to the configuration, true by default

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ figmaconfig:
   scale: 2
   format: png
   figmaurls: true
+  home: true
   documents:
     - document: aPDeXozOjVEEBVnRGP3gsm5B
       category: Components
