--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Check this awesome design documentation.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:categories/:title/
 
 # Jekyll Build settings
 markdown: kramdown
